versión final pre pruebas técnicas 🙏